Add conda meta.yaml

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -15,16 +15,13 @@ requirements:
         - cppzmq
         - hdf5
         - rapidjson
+        - boost
 
     run:
-        - cmake
-        - gcc
         - cppzmq
         - hdf5
         - rapidjson
-
-    test:
-        - gtest
+        - boost
 
 
 about:
