--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ install:
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
   - conda config --add channels defaults
-  - conda condig --add channels conda-forge
+  - conda config --add channels conda-forge
   - conda update -q --all
   - conda install conda-build anaconda-client
   # build
