--- a/sf_alvra/Makefile
+++ b/sf_alvra/Makefile
@@ -4,7 +4,7 @@ BIN_DIR = ./bin
 MKDIR = mkdir -p
 
 CPP = g++
-CPPFLAGS = -Wall -Wfatal-errors -fPIC -pthread -std=c++11 -I../../src -I../../include -I${CONDA_PREFIX}/include
+CPPFLAGS = -Wall -Wfatal-errors -std=c++11 -I../../src -I../../include -I${CONDA_PREFIX}/include
 LDLIBS = -L../../bin -L${CONDA_PREFIX}/lib -L/usr/lib64 -lcpp_h5_writer -lzmq -lhdf5 -lhdf5_hl -lhdf5_cpp -lhdf5_hl_cpp -lboost_system -lboost_regex -lboost_thread -lpthread
 LDLIBS_TEST = -lgtest_main -lgtest
 
