--- a/core-writer/CMakeLists.txt
+++ b/core-writer/CMakeLists.txt
@@ -3,8 +3,10 @@ file(GLOB SOURCES
         src/compression/*.cpp
         src/compression/*.c)
 
+
+
 add_library(core-writer ${SOURCES})
-include_directories(core-writer include/)
+include_directories(core-writer external/)
 
 target_include_directories(core-writer PUBLIC src/)
 target_include_directories(core-writer PUBLIC src/compression)
