Split file to external and core

--- a/core-writer/CMakeLists.txt
+++ b/core-writer/CMakeLists.txt
@@ -1,14 +1,11 @@
-file(GLOB SOURCES
-        src/*.cpp
-        src/compression/*.cpp
-        src/compression/*.c)
+add_subdirectory(external/)
+
+file(GLOB SOURCES src/*.cpp)
 
 add_library(core-writer STATIC ${SOURCES})
 include_directories(core-writer external/)
 
-target_include_directories(core-writer PUBLIC
-        src/
-        src/compression)
+target_include_directories(core-writer PUBLIC src/)
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     target_compile_definitions(core-writer PRIVATE DEBUG_OUTPUT)
