Add cpp compression file

--- a/core-writer/external/CMakeLists.txt
+++ b/core-writer/external/CMakeLists.txt
@@ -1,4 +1,6 @@
-file(GLOB SOURCES bitshuffle/*.c)
+file(GLOB SOURCES
+        bitshuffle/*.c
+        bitshuffle/*.cpp)
 
 add_library(external STATIC ${SOURCES})
 target_include_directories(external PUBLIC .)
