Add compression library to tests

--- a/core-writer/test/CMakeLists.txt
+++ b/core-writer/test/CMakeLists.txt
@@ -2,6 +2,7 @@ add_executable(core-writer_tests test_main.cpp)
 
 target_link_libraries(core-writer_tests
         core-writer
+        external
         gtest
         zmq
         hdf5
