Add module sub-folder

--- a/core-writer/CMakeLists.txt
+++ b/core-writer/CMakeLists.txt
@@ -3,7 +3,8 @@ add_subdirectory(external/)
 file(GLOB SOURCES
         src/*.cpp
         src/writer/*.cpp
-        src/receiver/*.cpp)
+        src/receiver/*.cpp
+        src/module/*.cpp)
 
 add_library(core-writer STATIC ${SOURCES})
 include_directories(core-writer external/)
