Remove not yet completed builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,5 +29,6 @@ add_subdirectory(
         EXCLUDE_FROM_ALL)
 
 add_subdirectory("core-writer")
-add_subdirectory("csaxs")
+#add_subdirectory("csaxs")
 add_subdirectory("sf-writer")
+#add_subdirectory("swmr-writer")
