--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,4 +31,5 @@ add_subdirectory(
 add_subdirectory("core-writer")
 #add_subdirectory("csaxs")
 add_subdirectory("sf-writer")
+add_subdirectory("sf-buffer")
 #add_subdirectory("swmr-writer")
