--- a/core-writer/CMakeLists.txt
+++ b/core-writer/CMakeLists.txt
@@ -10,6 +10,7 @@ add_library(core-writer STATIC ${SOURCES})
 include_directories(core-writer external/)
 
 target_include_directories(core-writer PUBLIC include/)
+target_include_directories(core-writer PUBLIC external/)
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     target_compile_definitions(core-writer PRIVATE DEBUG_OUTPUT)
