Add HDF5 library to link tests

--- a/core-buffer/test/CMakeLists.txt
+++ b/core-buffer/test/CMakeLists.txt
@@ -2,4 +2,7 @@ add_executable(core-buffer_tests test_main.cpp)
 
 target_link_libraries(core-buffer_tests
         core-buffer
+        hdf5
+        hdf5_hl
+        hdf5_cpp
         gtest)
