--- a/lib/conda-recipe/meta.yaml
+++ b/lib/conda-recipe/meta.yaml
@@ -6,12 +6,12 @@ build:
   number: 0
 
 source:
-    path: ..
+    path: ../
 
 requirements:
     build:
         - make
-        - gcc
+        - {{ compiler('gcc') }}
         - cppzmq ==4.2.1
         - hdf5 ==1.10.1
         - boost ==1.61.0
