--- a/sf-writer/CMakeLists.txt
+++ b/sf-writer/CMakeLists.txt
@@ -1,7 +1,7 @@
 file(GLOB SOURCES
         *.cpp)
 
-add_executable(sf-writer sf_h5_writer.cpp)
+add_executable(sf-writer sf_h5_writer.cpp BufferMultiReader.cpp)
 set_target_properties(sf-writer PROPERTIES OUTPUT_NAME sf_h5_writer)
 
 target_include_directories(sf-writer PRIVATE ${MPI_CXX_INCLUDE_PATH})
