Add new SF writer with basic operations

--- a/sf-writer/CMakeLists.txt
+++ b/sf-writer/CMakeLists.txt
@@ -1,7 +1,10 @@
 file(GLOB SOURCES
         *.cpp)
 
-add_executable(sf-writer sf_h5_writer.cpp BufferMultiReader.cpp)
+add_executable(sf-writer
+        sf_h5_writer.cpp
+        BufferMultiReader.cpp
+        SFWriter.cpp)
 set_target_properties(sf-writer PROPERTIES OUTPUT_NAME sf_h5_writer)
 
 target_link_libraries(sf-writer
