Change main test name

--- a/core-buffer/test/CMakeLists.txt
+++ b/core-buffer/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(core-buffer_tests test_main.cpp)
+add_executable(core-buffer_tests main.cpp)
 
 target_link_libraries(core-buffer_tests
         core-buffer
