Add basic performance test executable

--- a/core-buffer/test/CMakeLists.txt
+++ b/core-buffer/test/CMakeLists.txt
@@ -6,3 +6,12 @@ target_link_libraries(core-buffer_tests
         hdf5_hl
         hdf5_cpp
         gtest)
+
+add_executable(perf-sf_writer perf_SFWriter.cpp)
+
+target_link_libraries(perf-sf_writer
+        core-buffer
+        hdf5
+        hdf5_hl
+        hdf5_cpp
+        gtest)
