--- a/tomcat/Dockerfile
+++ b/tomcat/Dockerfile
@@ -7,7 +7,8 @@ RUN rm -rf /lib_cpp_h5_writer/ \
   && git fetch \
   && git checkout tomcat \
   && cd /lib_cpp_h5_writer/tomcat \
-  && make
+  && make \
+  && export LD_LIBRARY_PATH=/lib_cpp_h5_writer/lib/bin \
 
 RUN ["chmod", "+x", "/lib_cpp_h5_writer/tomcat/test_simulation_h5_writer.sh"]
 RUN ["chmod", "+x", "/lib_cpp_h5_writer/tomcat/docker-entrypoint.sh"]
