--- a/tomcat/conda-recipe/meta.yaml
+++ b/tomcat/conda-recipe/meta.yaml
@@ -12,7 +12,7 @@ requirements:
 
     build:
         - make
-        - gcc
+        - {{ compiler('cxx') }}
         - cppzmq ==4.2.1
         - hdf5 ==1.10.1
         - boost ==1.61.0
