--- a/tomcat/dockerfile/Dockerfile
+++ b/tomcat/dockerfile/Dockerfile
@@ -2,6 +2,8 @@ FROM lhdamiani/tomcat_writer:latest
 LABEL maintainer="Leonardo Hax <leonardo.hax@psi.ch>"
 WORKDIR /
 
+RUN yes | yum install git
+
 RUN if [ -d "/lib_cpp_h5_writer" ]; then rm -Rf /lib_cpp_h5_writer; fi \
   && git clone https://github.com/paulscherrerinstitute/lib_cpp_h5_writer.git \
   && cd /lib_cpp_h5_writer \
