update test docker script.

--- a/tomcat/dockerfile/Dockerfile
+++ b/tomcat/dockerfile/Dockerfile
@@ -4,14 +4,14 @@ WORKDIR /
 
 RUN yes | yum install git
 
-RUN if [ -d "/lib_cpp_h5_writer" ]; then rm -Rf /lib_cpp_h5_writer; fi \
+RUN rm -Rf /lib_cpp_h5_writer \
   && git clone https://github.com/paulscherrerinstitute/lib_cpp_h5_writer.git \
-  && cd /lib_cpp_h5_writer \
+  && cd /lib_cpp_h5_writer/ \
   && git fetch \
   && git checkout tomcat \
-
-CMD chmod +x /lib_cpp_h5_writer/tomcat/dockerfile/test_simulation_h5_writer.sh
-
-CMD /lib_cpp_h5_writer/tomcat/dockerfile/test_simulation_h5_writer.sh
+  && chmod +x /lib_cpp_h5_writer/tomcat/dockerfile/test_simulation_h5_writer.sh \
+  && cd /lib_cpp_h5_writer/tomcat/dockerfile/
+  
+RUN /lib_cpp_h5_writer/tomcat/dockerfile/test_simulation_h5_writer.sh 
 
 ENTRYPOINT ["/bin/bash"]
