--- a/lib/conda-recipe/meta.yaml
+++ b/lib/conda-recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
 requirements:
     build:
         - make
-        - gcc
+        - {{ compiler('cxx') }}
         - cppzmq ==4.2.1
         - hdf5 ==1.10.1
         - boost ==1.61.0
